--- a/installation_basics/todolist/package.json
+++ b/installation_basics/todolist/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/base": "^5.0.0-alpha.67",
     "@mui/material": "^5.4.0",
+    "@mui/styled-engine-sc": "^5.3.0",
     "@mui/system": "^5.4.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -15,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
